test/tests/stages/18_structures/invalid_types/scalar_required/pass_struct_as_scalar_param.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(foo)
  (
  int
  identifier(a)
  )
  {
  return
  identifier(a)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  return
  identifier(foo)
  (
  identifier(x)
  )
  ;
  }
